--- a/inventory/dev.yml
+++ b/inventory/dev.yml
@@ -1,22 +1,42 @@
 nfs:
   hosts:
-    52.14.199.84:
-      ansible_ssh_user: ec2-user
+    172.31.11.165:
+      ansible_user: ec2-user
 
 webservers:
   hosts:
-    3.139.83.144:
-      ansible_ssh_user: ec2-user
-    3.144.83.136:
-      ansible_ssh_user: ec2-user
+    172.31.10.19:
+      ansible_user: ec2-user
+    172.31.12.81:
+      ansible_user: ec2-user
 
 db:
   hosts:
-    3.143.244.106:
-      ansible_ssh_user: ec2-user
+    172.31.14.241:
+      ansible_user: ec2-user
 
 lb:
   hosts:
-    3.139.98.63:
-      ansible_ssh_user: ubuntu
+    172.31.2.61:
+      ansible_user: ubuntu
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
