--- a/playbooks/common.yml
+++ b/playbooks/common.yml
@@ -1,8 +1,8 @@
 - name: update web, nfs and db servers
-  hosts: webservers, nfs, db
+  hosts: webservers,nfs,db
   remote_user: ec2-user
-  become: yes
-  become_user: root
+  become: true
+  become_method: sudo
   tasks:
   - name: ensure wireshark is at the latest version
     yum:
@@ -12,8 +12,8 @@
 - name: update LB server
   hosts: lb
   remote_user: ubuntu
-  become: yes
-  become_user: root
+  become: true
+  become_method: sudo
   tasks:
   - name: Update apt repo
     apt:
