--- a/playbooks/common.yml
+++ b/playbooks/common.yml
@@ -1,8 +1,36 @@
+# - name: update web, nfs and db servers
+#   hosts: webservers,nfs,db
+#   remote_user: ec2-user
+#   become: true
+#   become_method: sudo
+#   tasks:
+#   - name: ensure wireshark is at the latest version
+#     yum:
+#       name: wireshark
+#       state: latest
+
+# - name: update LB server
+#   hosts: lb
+#   remote_user: ubuntu
+#   become: true
+#   become_method: sudo
+#   tasks:
+#   - name: Update apt repo
+#     apt:
+#       update_cache: yes
+
+#   - name: ensure wireshark is at the latest version
+#     apt:
+#       name: wireshark
+#       state: latest
+
+
+
 - name: update web, nfs and db servers
-  hosts: webservers,nfs,db
+  hosts: webservers, nfs, db
   remote_user: ec2-user
   become: true
-  become_method: sudo
+  become_user: root
   tasks:
   - name: ensure wireshark is at the latest version
     yum:
@@ -13,7 +41,7 @@
   hosts: lb
   remote_user: ubuntu
   become: true
-  become_method: sudo
+  become_user: root
   tasks:
   - name: Update apt repo
     apt:
