--- a/playbooks/common.yml
+++ b/playbooks/common.yml
@@ -26,7 +26,7 @@
 
 
 
-- name: update web, nfs and db servers
+- name: update webservers, nfs and db servers
   hosts: webservers, nfs, db
   remote_user: ec2-user
   become: true
