--- a/playbooks/site.yml
+++ b/playbooks/site.yml
@@ -1,5 +1,5 @@
-# - hosts: all
-# - import_playbook: ../static-assignments/common-del.yml
+- hosts: all
+- import_playbook: ../static-assignments/common-del.yml
 
 - hosts: uat-webservers
 - import_playbook: ../static-assignments/uat-webservers.yml
